Fix layout bug

--- a/hallway-dashboard-fe/src/component/Weather/WeatherBar.module.css
+++ b/hallway-dashboard-fe/src/component/Weather/WeatherBar.module.css
@@ -1,9 +1,6 @@
 .main {
 	width: 88vw;
-	height: 16vh;
-}
-
-.main div {
+	height: 14vh;
 	display: flex;
 	flex-direction: row;
 	box-sizing: border-box;
